--- a/index.html
+++ b/index.html
@@ -51,43 +51,43 @@
     <p><b>Diferencias</b></p>
     <ol>
         <li>
-            <p>Git vs. GitHub-Función principal</p>
+            <p><b> Git vs. GitHub-Función principal</p></b>
         </li>
 
-        <p>Git es un sistema de control de versiones distribuido que registra las distintas versiones de un archivo (o conjunto de archivos). Le permite a los usuarios acceder, comparar, actualizar y distribuir cualquiera de las versiones registradas en
-            cualquier momento,
+        <p> Git es un sistema de control de versiones distribuido que registra las distintas versiones de un archivo (o conjunto de archivos). Le permite a los usuarios acceder, comparar, actualizar y distribuir cualquiera de las versiones registradas en
+            cualquier momento.
         </p>
         <p>Sin embargo GitHub principalmente es una plataforma de alojamiento para albergar tus repositorios Git en la web. Esto permite a los usuarios mantener sus repositorios remotos privados o públicos para esfuerzos colaborativos.
         </p>
 
         <li>
-            <p> Diferencia 2: Git vs. GitHub-Plataforma de operación</li>
-        </p>
-        <p>Los usuarios instalan y ejecutan Git en sus equipos locales.
-        </p>
-        <p>Esto significa que la mayoría de las operaciones de Git se pueden lograr sin una conexión a internet.
-        </p>
-        <p>Sin embargo GitHub es un servicio basado en la web que opera solamente en línea. Esto significa que necesitas estar conectado para hacer cualquier cosa en GitHub
-        </p>
-        <li>Git vs. GitHub-Creadores</li>
-        <p>Linus Torvalds comenzó Git en Abril del 2005.
-        </p>
-        <p>Chris Wanstrath, P. J. Hyett, Tom Preston-Werner, y Scott Chacon fundaron GitHub.com en Febrero 2008.
-        </p>
-        <li>
-            <p>Git vs. GitHub-Soporte/mantenimiento</p>
-        </li>
-        <p>En Julio 2005, Linus Torvalds entregó el mantenimiento de Git a Junio C. Hamano-quien ha dado soporte a la plataforma desde entonces
-        </p>
-        <p>En Octubre 2018, Microsoft compró GitHub.
-        </p>
-        <li>
-            <p>Git vs. GitHub-Competidores
+            <p><b> Diferencia 2: Git vs. GitHub-Plataforma de operación</li></b>
             </p>
-        </li>
-        <p>Algunas alternativas populares para Git son Mercurial, Team Foundation Version Control (TFVC), Perforce Helix Core, Apache Subversion, y IBM Rational ClearCase. Los competidores más cercanos a GitHub son GitLab, Bitbucket, SourceForge, Cloud Source
-            Repositories, y AWS CodeCommit.
-        </p>
+            <p>Los usuarios instalan y ejecutan Git en sus equipos locales.
+            </p>
+            <p>Esto significa que la mayoría de las operaciones de Git se pueden lograr sin una conexión a internet.
+            </p>
+            <p>Sin embargo GitHub es un servicio basado en la web que opera solamente en línea. Esto significa que necesitas estar conectado para hacer cualquier cosa en GitHub
+            </p>
+            <li><b>Git vs. GitHub-Creadores</li></b>
+                <p>Linus Torvalds comenzó Git en Abril del 2005.
+                </p>
+                <p>Chris Wanstrath, P. J. Hyett, Tom Preston-Werner, y Scott Chacon fundaron GitHub.com en Febrero 2008.
+                </p>
+                <li>
+                    <p><b> Git vs. GitHub-Soporte/mantenimiento</p></b>
+                </li>
+                <p>En Julio 2005, Linus Torvalds entregó el mantenimiento de Git a Junio C. Hamano-quien ha dado soporte a la plataforma desde entonces
+                </p>
+                <p>En Octubre 2018, Microsoft compró GitHub.
+                </p>
+                <li>
+                    <p><b>Git vs. GitHub-Competidores
+                    </p></b>
+                </li>
+                <p>Algunas alternativas populares para Git son Mercurial, Team Foundation Version Control (TFVC), Perforce Helix Core, Apache Subversion, y IBM Rational ClearCase. Los competidores más cercanos a GitHub son GitLab, Bitbucket, SourceForge,
+                    Cloud Source Repositories, y AWS CodeCommit.
+                </p>
     </ol>
 </body>
 
